fix landing page menu icon color on small phone screens

--- a/public/resources/css/queries.css
+++ b/public/resources/css/queries.css
@@ -332,7 +332,6 @@
   ================ */
 
   div.l-container .menu-icon {
-    color: rgb(156, 152, 152);
     font-size: 20px;
     left: 0;
     top: 40px;
